# lab

./: .gitattributes  .gitignore  .pre-commit-config.yaml  ACCEPTANCE.md  CONSTITUTION.md  CONTRACTS.md  DEAD_ENDS.md  DEFERRALS.md  DIVERGENCES.md  HANDOFF.md  MASTER_BLUEPRINT.md  NOTICE  PLAYBOOK.md  PROJECT_STATE.md  README.md  SESSION_PROMPT.md  pyproject.toml
.githooks/: commit-msg
.github/workflows/: ci.yml
docs/deep_dives/: P0_scaffold.md  P1_substrate.md  README.md
docs/handoff/: P0_HANDOFF.md
src/lab/: __init__.py
src/lab/core/: config.py  logging.py
tests/: conftest.py
tests/completeness/: registry.py  test_bootstrap.py  test_checkers.py  test_ci_config.py  test_gate.py  test_scaffold.py
tests/completeness/fixtures/attribution/: FIXTURE_GIT_LOG  README.md
tests/completeness/fixtures/attribution_clean/: FIXTURE_GIT_LOG  README.md  topic_not_attribution.py
tests/completeness/fixtures/fixture_provenance/: ACCEPTANCE.md
tests/completeness/fixtures/fixture_provenance/gates/: costs_case_a.csv
tests/completeness/fixtures/fixture_provenance_clean/: ACCEPTANCE.md
tests/completeness/fixtures/fixture_provenance_clean/gates/: costs_case_a_derivation.md
tests/completeness/fixtures/imports_clean/: README.md
tests/completeness/fixtures/imports_clean/tools/: import_rules.yaml
tests/completeness/fixtures/manifest/: DEFERRALS.md
tests/completeness/fixtures/manifest_clean/: DEFERRALS.md
tests/completeness/fixtures/spec_isolation/: FIXTURE_CHANGED_FILES  README.md
tests/completeness/fixtures/spec_isolation_logs/: FIXTURE_CHANGED_FILES  README.md
tests/completeness/fixtures/stubs/: DEFERRALS.md
tests/completeness/fixtures/stubs/src/lab/: planted.py
tests/completeness/fixtures/substrate_purity/: FIXTURE_SUBSTRATE_DIFF
tests/completeness/fixtures/substrate_purity_clean/: FIXTURE_SUBSTRATE_DIFF
tests/unit/core/: test_config.py  test_logging.py
tools/: check_attribution.py  check_fixture_provenance.py  check_import_graph.py  check_manifest.py  check_no_stubs.py  check_spec_isolation.py  check_substrate_purity.py  gate.py  import_rules.yaml  preflight.py
(+10 files in other folders)
